--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Scribble
 description:      A jekyll theme. Because I scribble.
-url:              # Site url, without a slash at the end.
-signoff:          # Your name.
+url:              https://linux2go.github.io/blog.linux2go.dk # Site url, without a slash at the end.
+signoff:          Soren Hansen
 disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
 facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
